--- a/package.json
+++ b/package.json
@@ -6,10 +6,9 @@
   "types": "dist/toast.d.ts",
   "scripts": {
     "build:css": "sass src/style/toast.sass dist/toast.css --style=compressed --no-source-map",
-    "build:ts": "tsc",
+    "build:ts": "esbuild src/toast.ts --bundle --minify --outfile=dist/toast.js",
     "build": "npm run build:css && npm run build:ts",
-    "watch": "tsc --watch & sass --watch src/style/toast.sass:dist/toast.css",
-    "dev": "concurrently \"esbuild src/toast.ts --bundle --outfile=dist/toast.js --watch\" \"sass --watch src/style/toast.sass:dist/toast.css\""
+    "watch": "concurrently \"esbuild src/toast.ts --bundle --outfile=dist/toast.js --watch\" \"sass --watch src/style/toast.sass:dist/toast.css\""
   },
   "keywords": [
     "toast",
@@ -25,8 +24,7 @@
   "devDependencies": {
     "concurrently": "^9.2.0",
     "esbuild": "^0.25.8",
-    "sass": "^1.89.2",
-    "typescript": "^5.9.2"
+    "sass": "^1.89.2"
   },
   "dependencies": {
     "lucide": "^0.536.0"
